06-kubernetes/02-netpol-kyverno/kyverno-policies/policy-no-latest.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Enforce
  rules:
  - name: no-latest
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: "Image tag 'latest' is not allowed. Pin to an exact version."
      pattern:
        spec:
          containers:
          - image: "!*:latest"
